--- a/styling/styles.scss
+++ b/styling/styles.scss
@@ -53,7 +53,7 @@ nav {
     }
 }
 
-@media screen and (min-width: 376px) {
+@media screen and (min-width: 420px) {
     .mobile-nav {
         display: none;
     }
